--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@
                             <p>Our tailored approach ensures accuracy and efficiency in every aspect of the billing
                                 process, allowing you to achieve remarkable results and enhance your financial health.
                             </p>
-                            <a href="javascript:void(0);" class="default__button">Learn more</a>
+                            <a href="web-development-services" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -1019,7 +1019,7 @@
                                 content marketing programs, fostering engagement and delivering measurable results for
                                 business growth.
                             </p>
-                            <a href="javascript:void(0);" class="default__button">Learn more</a>
+                            <a href="digital-marketing-services" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -1029,7 +1029,7 @@
                             <p>Digital Minds On delivers dedicated, 24/7 customer support services, ensuring enhanced
                                 customer satisfaction through smooth, efficient interactions for a seamless experience
                                 every time.</p>
-                            <a href="javascript:void(0);" class="default__button">Learn more</a>
+                            <a href="contact" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -1039,7 +1039,7 @@
                             <p>Digital Minds On specializes in application and website development, utilizing the latest
                                 technologies and providing IT support services for seamless and effective technology
                                 implementation.</p>
-                            <a href="javascript:void(0);" class="default__button">Learn more</a>
+                            <a href="network-services" class="default__button">Learn more</a>
                         </div>
                     </div>
                 </div>
