--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
             -moz-osx-font-smoothing: grayscale;
         }
     </style>
+     <!-- title scrollbar -->
+     <script>
+        // Text for the title
+        let titleText = "Digital Minds On | Web & App Development | E-commerce | Graphic Design ";
+        let index = 0;
+        function scrollTitle() {
+            document.title = titleText.slice(index) + titleText.slice(0, index);
+            index = (index + 1) % titleText.length;
+        }
+        setInterval(scrollTitle, 200); 
+    </script>
+    <!-- title scrollbar -->
     <script>
         if (
             localStorage.getItem("theme-color") === "dark" ||
