banner images fixed

--- a/about.html
+++ b/about.html
@@ -304,8 +304,8 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea"
-            style="background: url(assets/img/about/about-2.webp); background-repeat: no-repeat !important; background-size: cover !important; background-position: 100% 20% !important;">
-            <div class="breadcrumbarea__overlay"></div>
+            style="background: url(assets/img/about/contact-scaled.webp); background-repeat: no-repeat !important; background-size: cover !important;">
+            <!-- <div class="breadcrumbarea__overlay"></div> -->
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
