--- a/contact.html
+++ b/contact.html
@@ -314,8 +314,7 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up"
-            style="background: url(assets/img/about/about-1.webp);">
-            <div class="breadcrumbarea__overlay"></div>
+            style="background: url(assets/img/about/contact-scaled.webp); background-size: cover;">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
