--- a/project.html
+++ b/project.html
@@ -311,8 +311,7 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up"
-            style="background: url(assets/img/about/about-2.webp); background-repeat: no-repeat !important; background-size: cover !important; background-position: 100% 20% !important;">
-            <div class="breadcrumbarea__overlay"></div>
+            style="background: url(assets/img/about/contact-scaled.webp); background-repeat: no-repeat !important; background-size: cover !important;">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
