--- a/contact.html
+++ b/contact.html
@@ -540,10 +540,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.2528001093!2d-74.14448735108942!3d40.697631233315505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1714748102465!5m2!1sen!2sbd"
-                            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3403.1031286596185!2d74.31385357441154!3d31.466349149432478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sDigital%20Minds%20On%2C%20Office%20No%20MB%2019%2C%20Zainab%20Tower%2C%20Model%20Town%20Link%20Rd%2C%20Phase%203%20GECH%20Society%2C%20Lahore%2C%20Punjab%2054600!5e0!3m2!1sen!2s!4v1734358863626!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                     </div>
                 </div>
