--- a/what-is-web-development.html
+++ b/what-is-web-development.html
@@ -312,7 +312,7 @@
         <!-- End Offcanvas header menu -->
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(assets/img/herobaner/blog-img.webp);">
+        <div class="breadcrumbarea" style="background: url(assets/img/herobaner/blog-img.webp); background-size: cover !important;">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
