hover aniation stop

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             font-size: 21px;
             color: #fff;
         }
+        .header__animate__content:hover {
+          animation-play-state: paused;
+        }
         .header__animate {
             overflow: hidden;
             white-space: nowrap;
