--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                         </div>
                         <div class="col-md-6 text-center mt-4 mt-md-0" data-aos="fade-up" data-aos-duration="2000">
                             <p class="mt-2">
-                                Digital Minds On specializes in delivering cutting-edge software development solutions
+                                Digital Minds On specializes in delivering cutting-edge <a href="software-development-services" style="font-weight: bold; color: #FE0094;"> software development solutions</a>
                                 tailored to meet the unique needs of modern businesses. Our team of experienced
                                 developers and designers collaborates to create high-quality, efficient, and scalable
                                 applications that drive productivity and innovation. With expertise in web and mobile
