home page internal link

--- a/index.html
+++ b/index.html
@@ -571,8 +571,8 @@
                                 Digital Minds On specializes in delivering cutting-edge <a href="software-development-services" style="font-weight: bold; color: #FE0094;"> software development solutions</a>
                                 tailored to meet the unique needs of modern businesses. Our team of experienced
                                 developers and designers collaborates to create high-quality, efficient, and scalable
-                                applications that drive productivity and innovation. With expertise in web and mobile
-                                development, cloud solutions, and custom software, we help businesses streamline
+                                applications that drive productivity and innovation. With expertise in web and <a href="mobile-app-development-services" style="font-weight: bold; color: #FE0094;">mobile
+                                development</a>, cloud solutions, and custom software, we help businesses streamline
                                 operations, enhance user experiences, and achieve their digital transformation goals.
                             </p>
                         </div>
@@ -1043,18 +1043,14 @@
             data-aos-duration="1500">
             <div class="container">
                 <div class="text-center mb-5">
-                    <h2 style="color: #fff;">Our Areas of Specialties in Revenue Cycle Management</h2>
-                    <p style="color: #fff;">At MedBrigade, our specialties in Revenue Cycle Management (RCM) encompass a
-                        comprehensive range
-                        of services tailored to meet the diverse needs of healthcare providers.</p>
+                    <h2 style="color: #fff;">Our Specialties</h2>
                 </div>
                 <div class="row g-4">
                     <div class="col-md-4">
                         <div class="card specialty-card">
 
                             <h5>Web Development</h5>
-                            <p>Our tailored approach ensures accuracy and efficiency in every aspect of the billing
-                                process, allowing you to achieve remarkable results and enhance your financial health.
+                            <p>Digital Minds On Providing cutting-edge web development services to craft innovative, user-friendly, and scalable digital solutions tailored to your business needs.
                             </p>
                             <a href="web-development-services" class="default__button">Learn more</a>
                         </div>
