--- a/software-development-services.html
+++ b/software-development-services.html
@@ -546,7 +546,7 @@
                                                 <p>We develop safe and effective web applications that offer the
                                                     outcomes imperative for your business operations. Being the software
                                                     development services company we guarantee non-interference with your
-                                                    web sites functionality and optimal usability for users on those.
+                                                    <a href="web-development-services" style="color: #fe0094; font-weight: bold;">web sites functionality</a> and optimal usability for users on those.
                                                 </p>
                                             </div>
                                         </div>
@@ -561,7 +561,7 @@
 
                                 <p>Consumers are more likely to own mobile devices than any other form of technology in
                                     today’s world. Among our software solutions, which we described as a custom software
-                                    development service, we also include mobile applications that provide smooth and
+                                    development service, we also include <a href="mobile-app-development-services" style="color: #fe0094; font-weight: bold;">mobile applications</a> that provide smooth and
                                     enjoyable user experience on both Android and iOS.</p>
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
@@ -806,7 +806,7 @@
                             <h2>Conclusion</h2>
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>At Digital Minds On, and does not only build applications for our customers but build
+                            <p>At <a href="/"style="color: #fe0094; font-weight: bold;">Digital Minds On</a>, and does not only build applications for our customers but build
                                 effective solutions that will sure bring about success and measurable outcomes. Being
                                 one of the top software development firms we propose to create unique, efficient, and
                                 user-centric applications for businesses of the present days. Whether you need custom
