--- a/web-development-services.html
+++ b/web-development-services.html
@@ -590,7 +590,7 @@
                             <p>Time-saving because of the efficient creation of websites and effortless maintenance
                                 of materials.
                                 <br><b>1.</b>Utilizing information technology to improve customer experience.
-                                <br><b>2.</b>Engaging UI/UX design, development, and digital marketing skills.
+                                <br><b>2.</b>Engaging <a href="ui-ux-design" style="font-weight: bold; color: #fe0094;">UI/UX design</a>, development, and <a href="digital-marketing-services" style="font-weight: bold; color: #fe0094;">digital marketing</a> skills.
                                 <br><b>3.</b>Website functionality that can be increased as your business expands.
                                 <br><b>4.</b>A partner as a full-service web application development agency is
                                 committed to achieving your vision online faster and winning the competition.
@@ -917,7 +917,7 @@
                             <p>It is from this well-planned web location that today’s business develops its web
                                 presence and derives its principal online revenue and customers while providing the
                                 foundation for tomorrow’s growth and adaptation to new technologies and new
-                                opportunities as they emerge. When you hire Digital Minds On, you are hiring a
+                                opportunities as they emerge. When you hire <a href="/" style="color: #fe0094; font-weight: bold;">Digital Minds On</a>, you are hiring a
                                 full-service digital solutions provider that offers ideas, aesthetic expressions,
                                 technology, strategy, and expertise to create outstanding solutions that will
                                 revolutionize your online venture objectives and possibilities.<br><br>
