--- a/mobile-app-development-services.html
+++ b/mobile-app-development-services.html
@@ -520,8 +520,8 @@
 
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Digital Minds On is recognized for its depth of insights into core technology areas
-                                    ranging from software and application development to data and infrastructure. Our
-                                    core services include:</p>
+                                    ranging from software and application development to data and infrastructure. <a href="services" style="color: #fe0094; font-weight: bold;">Our
+                                    core services</a> include:</p>
 
 
                             </div>
@@ -762,7 +762,7 @@
                             <p>Digital Minds On is a company for app development and has an expert team of mobile
                                 app
                                 developers
-                                that are able to design strategies in regard to the individual problem areas,
+                                that are able to <a href="ui-ux-design" style="color: #fe0094; font-weight: bold;">design strategies</a> in regard to the individual problem areas,
                                 objectives, and
                                 procedures of the particular customers.</p>
 
@@ -834,7 +834,7 @@
                                     <h3>Conclusion </h3>
                                 </div>
                                 <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                    <p>Digital Minds On has a mission to help transform organizations into
+                                    <p><a href="/" style="color: #fe0094; font-weight: bold;">Digital Minds On</a> has a mission to help transform organizations into
                                         innovative
                                         app
                                         development solutions. We use this knowledge base to help you turn your
