--- a/software-development-services.html
+++ b/software-development-services.html
@@ -773,7 +773,7 @@
 
                             <p>Our team is involved in smooth deployment and we make it our business to ensure that the
                                 software under question interlinks with other systems in your organization successfully.
-                                Training is offered to ensure that the羊is understood by your team to the best of its
+                                Training is offered to ensure that the is understood by your team to the best of its
                                 potential.</p>
                         </div>
                         <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
