--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -344,15 +344,7 @@
                                 <h2 class="heading">Custom Wordpress Development Services Solution</h2>
                             </div>
                             <div class="herobanner__text">
-                                <p class="banner-width" style="max-width: 100%;"> At Digital Minds On, we specialize in
-                                    maximizing your WordPress website’s performance with our top-notch WordPress
-                                    development services. Our award-winning design and development team creates custom
-                                    themes tailored to your brand, helping you capture more leads and boost online
-                                    sales. Whether you’re launching a new site or enhancing an existing one, we ensure
-                                    seamless functionality and a stunning design that stands out. Let us help you
-                                    elevate your online presence with a solution that drives results. Get started on
-                                    your project today and experience the difference of working with experts committed
-                                    to your success.</p>
+                                <p class="banner-width" style="max-width: 100%;">Digital Minds On offers expert WordPress development services to optimize your website's performance. Our award-winning team designs custom themes tailored to your brand, enhancing lead generation and online sales. Launch or upgrade your site with seamless functionality and striking design. Elevate your online presence with proven results.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
