--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -547,7 +547,7 @@
                                             <h2>Crafting Content Marketing That Engages Your Audience and Turns Leads
                                                 into Loyal Customers</h2>
                                         </div>
-                                        <p>Our content marketing services transcend traditional methods by delivering
+                                        <p>Our <a href="content-creater" style="color: #fe0094; font-weight: bold;">content marketing</a> services transcend traditional methods by delivering
                                             purpose-driven storytelling. With a focus on more than just traffic, we
                                             ignite meaningful conversations, drive conversions, and build unwavering
                                             brand loyalty. Our seasoned content experts ensure your brand’s voice
@@ -697,7 +697,7 @@
                             <h3>Search Engine Optimization (SEO)</h3>
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>SEO is the process of making your website or web pages more search engine friendly and
+                            <p><a href="seo-services" style="color: #fe0094; font-weight: bold;">SEO</a> is the process of making your website or web pages more search engine friendly and
                                 making sure its placed in higher rank in the list of SERP. Given the reality of tens of
                                 billions of searches performed every day, landing on the first page of search results is
                                 vital to getting organic traffic to your site. Digital Minds On ensures that your
@@ -760,7 +760,7 @@
                             <h2>Why Should You Hire Digital Minds On for Your Digital Marketing Services?</h2>
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>Digital Minds On acknowledges the fact that no two enterprises are twins in terms of
+                            <p><a href="/" style="color: #fe0094; font-weight: bold;">Digital Minds On</a> acknowledges the fact that no two enterprises are twins in terms of
                                 their needs and that’s why we invest our time to understand you and your brand, what you
                                 are looking for, and who your target audience is before designing your unique digital
                                 marketing strategy. As our client, rest assured you are in safe hands and we coordinate
