--- a/game-development-services.html
+++ b/game-development-services.html
@@ -348,7 +348,7 @@
                                 <h2 class="heading">Mobile Game Development </h2>
                             </div>
                             <div class="herobanner__text">
-                                <p style="max-width: 950px;">At Digital Minds On, discover how to
+                                <p>At Digital Minds On, discover how to
                                     create engaging mobile games, optimize performance, and deliver regular updates.
                                     Explore proven strategies for game monetization, user acquisition, and successful
                                     publishing. Learn to integrate cutting-edge technologies, enhance user experience,
@@ -700,8 +700,8 @@
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>
-                                <b>Cutting-Edge Tools:</b> Our software is updated to the latest game development
-                                software so as to make sure that your project is developed using the most current
+                                <b>Cutting-Edge Tools:</b> Our software is updated to the latest <a href="software-development-services" style="color: #fe0094; font-weight: bold;">game development
+                                software</a> so as to make sure that your project is developed using the most current
                                 software.<br><br>
 
                                 <b> Client-Centered Approach:</b> In our process, we value integration and
@@ -743,7 +743,7 @@
                                 <b>Conceptualization:</b> Starting with conception and prototyping of the style,
                                 themes, mechanics, plots, and design of the characters with the clients.<br><br>
 
-                                <b>Design:</b> After choosing a concept, our designers draw out thorough
+                                <b>Design:</b> After choosing a concept, <a href="ui-ux-design" style="color: #fe0094; font-weight: bold;">our designers</a> draw out thorough
                                 illustrations and produce models that cover characters, areas, and interphase of use
                                 in order to design the look of the particular game.<br><br>
 
@@ -766,7 +766,7 @@
                             <h2>Conclusion</h2>
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>Digital Minds On offers the best game development services with a special focus on
+                            <p><a href="/" style="color: #fe0094; font-weight: bold;">Digital Minds On</a> offers the best game development services with a special focus on
                                 breakthrough services. It doesn’t matter if you want to build a 3D game, would like
                                 to take full advantage of Unreal Engine 5’s features, or need assistance after your
                                 game has been released, we’re here for you.
