--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -794,7 +794,7 @@
                             <h3>Mobile App UI/UX Design</h3>
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>This implies that most mobile applications must be designed differently since their
+                            <p>This implies that most <a href="mobile-app-development-services" style="color: #fe0094; font-weight: bold;">mobile applications</a> must be designed differently since their
                                 operating environment has limited space and different ways of use. We have a
                                 dedicated unit dealing in the development and design of application interfaces that
                                 are receptive to different mobile devices.</p>
@@ -830,7 +830,7 @@
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Our team also specializes in the creation of interfaces for specific custom
-                                application UI design software. Our software solutions are custom-built to your
+                                application UI design software. Our <a href="software-development-services" style="color: #fe0094; font-weight: bold;"> software solutions</a> are custom-built to your
                                 requirements, whether you need a system for use within the organization or for
                                 external use by customers.</p>
                         </div>
@@ -839,7 +839,7 @@
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>UI/UX design is crucial when developing applications, websites, and other digital
-                                goods, all of which must have strong user appeal. At Digital Minds On UX design
+                                goods, all of which must have strong user appeal. At <a href="/" style="color: #fe0094; font-weight: bold;"> Digital Minds On</a> UX design
                                 company Luxembourg, our core business is to provide professional design services
                                 that respond well to aesthetic appeal as well as usability. Whether it is an
                                 experimental website, an innovative application or a unique software interface, we
