--- a/content-creater.html
+++ b/content-creater.html
@@ -542,7 +542,7 @@
                             <h3>Social Media Content</h3>
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>Today social networks are the pulse of communication and interaction. Our creative
+                            <p>Today <a href="digital-marketing-services" style="color: #fe0094; font-weight: bold;">social networks</a> are the pulse of communication and interaction. Our creative
                                 group creates effective posts, captions, messages, and campaigns for engagement,
                                 broadening the audience, and increasing the brand’s presence in social networks.</p>
 
@@ -654,7 +654,7 @@
                             <div class="service__details__planning__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h2>Conclusion</h2>
                             </div>
-                            <p>Digital Minds On have come across the best content can indeed revolutionise companies. We
+                            <p><a href="/" style="color: #fe0094; font-weight: bold;">Digital Minds On</a> have come across the best content can indeed revolutionise companies. We
                                 ensure that through creativity, strategy and innovation brands are able to build and
                                 communicate their narratives within the market. Whether you need professional content in
                                 order to expand the range of activity on websites and blogs or to increase the
