--- a/network-services.html
+++ b/network-services.html
@@ -513,7 +513,7 @@
                                 <h2>Technical Support</h2>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>IT experts help end-users with hardware and software problems so that they can have
+                                <p>IT experts help end-users with hardware and <a href="software-development-services" style="color: #fe0094; font-weight: bold;">software problems</a> so that they can have
                                     the least number of problems in their daily business. From analyzing why a computer
                                     has crashed, to solving a problem with networks or answering any questions about
                                     using particular software, specialists in IT are right to help employees in
@@ -826,7 +826,7 @@
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>When a business expands its IT needs also evolve. IT business specialists have to
                                 anticipate current and future loads in the company’s IT environment so that the capacity
-                                of the company’s IT resources is proportional to the existing and expected load. These
+                                of the <a href="/" style="color: #fe0094; font-weight: bold;">company’s IT resources</a> is proportional to the existing and expected load. These
                                 include predicting future demands for resources, improving systems, and fine-tuning the
                                 performance in order to accommodate future growth.</p>
                         </div>
