--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -715,8 +715,8 @@
                             <p>Plugins are the key way of perusing the functionality of a WordPress website. Using our
                                 plugin development services, you can have your site develop a custom feature that
                                 completes tasks relevant to your business. If you require a special reservation system,
-                                need extra-level security, or want integrations with other applications, our custom
-                                WordPress website development services will be here to help.</p>
+                                need extra-level security, or want integrations with other <a href="mobile-app-development-services" style="color: #fe0094; font-weight: bold;">applications</a>, our custom
+                                WordPress <a href="web-development-services" style="color: #fe0094; font-weight: bold;">website development services</a> will be here to help.</p>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h2>Theme Customization</h2>
                             </div>
@@ -822,8 +822,8 @@
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>In the modern world, the role of an organization’s web presence is critically
-                                    important for its success. Our WordPress website development company Digital Minds
-                                    On helps you build a website that serves specific business objectives while creating
+                                    important for its success. Our WordPress website development company <a href="/" style="color: #fe0094; font-weight: bold;">Digital Minds
+                                    On</a> helps you build a website that serves specific business objectives while creating
                                     a positive first impression. So if you are planning on starting from scratch or
                                     redesigning your site from the ground up count on our team of specialists.</p>
                             </div>
